--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.3.0",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.7.4",
     "react": "^18.3.1",
