--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.3.0",
     "@types/react-redux": "^7.1.33",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-slick": "^0.30.2",
     "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
